syntax = "proto3";

package grouppb;

option go_package = "github.com/FSpruhs/kick-app/backend/user/grouppb";

service GroupService {
  rpc IsActivePlayer(IsActivePlayerRequest) returns (IsActivePlayerResponse);
  rpc GetActivePlayersByGroupID(GetActivePlayersByGroupIDRequest) returns (GetActivePlayersByGroupIDResponse);
  rpc HasPlayerAdminRole(HasPlayerAdminRoleRequest) returns (HasPlayerAdminRoleResponse);
}

message IsActivePlayerRequest {
  string userId = 1;
  string groupId = 2;
}

message IsActivePlayerResponse {
  bool isActive = 1;
}

message GetActivePlayersByGroupIDRequest {
  string groupId = 1;
}

message GetActivePlayersByGroupIDResponse {
  repeated string userIds = 1;
}

message HasPlayerAdminRoleRequest {
  string userId = 1;
  string groupId = 2;
}

message HasPlayerAdminRoleResponse {
  bool hasAdminRole = 1;
}